2011-02-22  Mike Frysinger  <vapier@gentoo.org>

  * src/cmd/cmd_print.c: Add a completion handler.

  * src/cmd/cmd_debug.c: Add a completion handler.

  * src/global/parse.c (urj_parse_stream): Do not call "quit" when we hit the
    end of a stream.  Simply return success so we can handle nested cases.

  * src/global/parse.c (urj_parse_line): Include the line when debugging.

2011-02-21  Mike Frysinger  <vapier@gentoo.org>

  * data/Makefile.am (nobase_dist_pkgdata_DATA): Add missing analog/bfin/bfin.

2011-02-19  Mike Frysinger  <vapier@gentoo.org>

  * src/cmd/cmd_bfin.c (cmd_bfin_run): Make sure the part is a Blackfin before
    we try calling functions that don't exist and segfault.

  * include/urjtag/parse.h, src/global/parse.c: Split tokenization of lines out
    of urj_parse_line and into its own function urj_tokenize_lines.  This lets
    us reuse this code elsewhere.

  * include/urjtag/cmd.h, src/apps/jtag/jtag.c, src/cmd/cmd.h,
    src/cmd/cmd_cmd.c: Rewrite command completion so that sub-options to
    commands may be completed as well.  Those commands must implement their
    own sub-completion handlers in order to support this.
  * src/cmd/cmd_bfin.c, src/cmd/cmd_cable.c, src/cmd/cmd_get.c,
    src/cmd/cmd_help.c, src/cmd/cmd_include.c, src/cmd/cmd_initbus.c,
    src/cmd/cmd_instruction.c, src/cmd/cmd_salias.c, src/cmd/cmd_set.c,
    src/cmd/cmd_shift.c, src/cmd/cmd_signal.c, src/cmd/cmd_test.c: Implement
    sub-completion handlers for these commands.

2011-02-18  Mike Frysinger  <vapier@gentoo.org>

  * src/bfin/bfin-part.c (_bfin_part_init): Add missing "void" to param list.

  * include/urjtag/parse.h: Document the various stream functions.

  * include/urjtag/parse.h (urj_parse_line): Constify the "line" argument.
  * src/global/parse.c (urj_parse_line): Likewise.

  * configure.ac: Check for getline().
  * src/global/parse.c (urj_parse_stream): Get rid of line length limitations
    by using getline when it is available.
