@@ -96,10 +96,16 @@ static void
 cmd_get_complete (urj_chain_t *chain, char ***matches, size_t *match_cnt,
                   const char *text, size_t text_len, size_t token_point)
 {
-    if (token_point != 1)
-        return;
+    switch (token_point)
+    {
+    case 1:
+        urj_completion_mayben_add_match (matches, match_cnt, text, text_len, "signal");
+        break;
 
-    cmd_signal_complete (chain, matches, match_cnt, text, text_len);
+    case 2:
+        cmd_signal_complete (chain, matches, match_cnt, text, text_len);
+        break;
+    }
 }
 
 const urj_cmd_t urj_cmd_get = {
